--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,12 +1,5 @@
-.header {
-  background: #b71775;
-  height: 200px;
+.hero {
+  width: 100%;
+  height: auto;
 }
 
-.header h1 {
-  margin: 0;
-  padding-top: 75px;
-  text-align: center;
-  color: white;
-  font-size: 3rem;
-}
